--- a/GDemo/app/src/main/AndroidManifest.xml
+++ b/GDemo/app/src/main/AndroidManifest.xml
@@ -32,8 +32,8 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
 
@@ -46,6 +46,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".main.SettingActivity"
+            android:label="@string/action_settings"
+           >
+        </activity>
+
+        <provider
+            android:name=".db.GifProvider"
+            android:authorities="com.fantasy.coolgif.provider" />
     </application>
 
 </manifest>
