--- a/GDemo/app/src/main/AndroidManifest.xml
+++ b/GDemo/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <application
         android:name="com.fantasy.coolgif.main.MainApplication"
         android:allowBackup="true"
@@ -55,6 +58,15 @@
         <provider
             android:name=".db.GifProvider"
             android:authorities="com.fantasy.coolgif.provider" />
+
+        <meta-data
+            android:name="com.bumptech.glide.integration.okhttp3.OkHttpGlideModule"
+            android:value="GlideModule" />
+
+        <meta-data android:value="58c8dd97734be44807000ce8" android:name="UMENG_APPKEY"/>
+        <meta-data android:value="${UMENG_CHANNEL_VALUE}" android:name="UMENG_CHANNEL"/>
+
+
     </application>
 
 </manifest>
