--- a/GDemo/app/build.gradle
+++ b/GDemo/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.fantasy.coolgif"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -41,6 +41,9 @@ android {
     productFlavors {
         qq {}
         wandoujia {}
+        china{}
+        xiaomi{}
+        anzhi{}
     }
 
     productFlavors.all {
